# Voice-Car-Service-Assist

./: .gitignore  docker-compose.yml  main.py  pyproject.toml
AgentServer/: .dockerignore  Dockerfile  db.sqlite  main.py  pyproject.toml  requirements.txt
AgentServer/agents/agents/: agent.py
AgentServer/agents/prompts/: __init__.py
AgentServer/agents/workers/: entrypoint.py
AgentServer/app/: config.py  exception_handler.py  main.py
AgentServer/app/api/dependencies/: services.py
AgentServer/app/api/exceptions/: agent.py  base_exception_handler.py  system.py  tool.py  workflow.py
AgentServer/app/api/routers/: agent.py  autosave.py  tool.py  workflows.py
AgentServer/app/application/exceptions/: agent_exceptions.py  exceptions.py  workflow_exceptions.py
AgentServer/app/application/facade/: agent_facade.py  tool_facade.py  workflow_facade.py
AgentServer/app/application/services/: agent_service.py  autosave_service.py  node_config_service.py  position_service.py  tool_service.py  workflow_service.py
AgentServer/app/domain/: exceptions.py  schema.py
AgentServer/app/domain/exceptions/: __init__.py  agent.py  base.py  system.py  tool.py  workflow.py
AgentServer/app/infrastructure/cache /: redis_client.py
AgentServer/app/infrastructure/db/: engine.py  models.py  session.py
AgentServer/app/infrastructure/repository/: agent_repository.py  autosave_repository.py  node_config_repository.py  position_repository.py  tool_repository.py  workflow_respository.py
AgentServer/migrations/versions/: 660c5d669b81_add_cascade_properties_to_tool_agent_id.py
(+24 files in other folders)
